force-app/main/default/objects/Member_Coverage__c/Member_Coverage__c.object-meta.xml
<CustomObject>
    <description>Lightweight stand-in for Health Cloud MemberPlan / coverage.</description>
    <label>Member Coverage</label>
    <nameField>
        <displayFormat>COV-{00000}</displayFormat>
        <label>Member Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>