force-app/main/default/objects/Member_Coverage__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coverages</relationshipLabel>
    <relationshipName>Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>