force-app/main/default/objects/Member_Coverage__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <label>Member Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>